crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__br__br_if.snap
---
source: crates/service/tests/diagnostics/typeck/br.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 14,
          "character": 8
        },
        "end": {
          "line": 14,
          "character": 15
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f64, f64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 12,
                "character": 8
              },
              "end": {
                "line": 12,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 11,
                "character": 8
              },
              "end": {
                "line": 11,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 6
        },
        "end": {
          "line": 15,
          "character": 9
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64], found [f32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 8
              },
              "end": {
                "line": 14,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 8
              },
              "end": {
                "line": 14,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 22
        },
        "end": {
          "line": 25,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [f64, f32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 32,
          "character": 8
        },
        "end": {
          "line": 34,
          "character": 24
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, i32], found [f32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 33,
                "character": 10
              },
              "end": {
                "line": 33,
                "character": 23
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 34,
          "character": 24
        },
        "end": {
          "line": 34,
          "character": 25
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [f64] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 32,
                "character": 8
              },
              "end": {
                "line": 34,
                "character": 24
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 34,
          "character": 25
        },
        "end": {
          "line": 34,
          "character": 26
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64], found [f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 31,
                "character": 13
              },
              "end": {
                "line": 31,
                "character": 25
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 34,
          "character": 26
        },
        "end": {
          "line": 34,
          "character": 27
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f32, f64] at the end",
      "data": [
        "f32",
        "f64"
      ]
    }
  ]
}
