crates/service/tests/diagnostics/typeck/snapshots/features__diagnostics__typeck__br__br_incorrect.snap
---
source: crates/service/tests/diagnostics/typeck/br.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 6
        },
        "end": {
          "line": 4,
          "character": 12
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found []"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 6
        },
        "end": {
          "line": 9,
          "character": 12
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [f64]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 6
              },
              "end": {
                "line": 8,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 8
        },
        "end": {
          "line": 16,
          "character": 24
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32], found [f64, f64]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 16,
                "character": 10
              },
              "end": {
                "line": 16,
                "character": 23
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 10
              },
              "end": {
                "line": 15,
                "character": 23
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 6
        },
        "end": {
          "line": 21,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found []"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 6
        },
        "end": {
          "line": 27,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32], found [f64]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 26,
                "character": 6
              },
              "end": {
                "line": 26,
                "character": 17
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 35,
          "character": 8
        },
        "end": {
          "line": 35,
          "character": 12
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32], found [f64, f64]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 34,
                "character": 8
              },
              "end": {
                "line": 34,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 33,
                "character": 8
              },
              "end": {
                "line": 33,
                "character": 19
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    }
  ]
}
